--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 oauth2 = "4.1.0"
 open = "1.7.1"
 rand = "0.8.4"
+reqwest = "~0.11"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
 string-error = "0.1.0"
